[package]
name = "NeoFM"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
chrono = "0.4.44"
crossterm = "0.29.0"
digest = "0.10"
lscolors = "0.21.0"
pbkdf2 = { version = "0.12", features = ["sha2"] }
rand = "0.8"
ratatui = "0.29.0"
sha2 = "0.10"
tui-textarea = "0.7.0"
zip = "8.5.1"
